...
                    "Usuário não pode ser vazio."
                } else {
                    ""
                }
            },
            errorMessage = usernameError,
            modifier = Modifier.testTag("usernameInput")
        )
        TextInputField(
            label = "Senha",
            value = password,
            onValueChange = {
                onPasswordChange(it)
...
                } else {
                    ""
                }
            },
            isPassword = true,
            errorMessage = passwordError,
            modifier = Modifier.testTag("passwordInput")
        )
    }
}

@Preview(showBackground = true, showSystemUi = true)
@Composable
...
