...
            text = "Entrar", enabled = true, onClick = {
                viewModel.login(name = username, password = password)
            }, modifier = Modifier
                .fillMaxWidth()
                .align(Alignment.BottomEnd)
                .size(60.dp)
                .testTag("buttomLogin")
        )
    }

    HandleLoginState(loginState, navController, AppRoutes.Home)
}

...
