package com.itbenevides.caed.ui.components.packages.menu

enum class TabScreen(val screen: String) {
    PACKAGE("Pacotes"),
    STATUS("Status"),
    DATA("Dados")
}
